Bug 362549. isRectObscuredBySubview should ignore hidden subviews. r=josh,sr=vlad,a=beltzner